# IDCardNumberDemo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gaofu/idcardnumberdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  native-lib.cpp  utils.cpp  utils.h
app/src/main/java/com/gaofu/idcardnumberdemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gaofu/idcardnumberdemo/: ExampleUnitTest.java
